updated notebook and setup

--- a/train_deploy_monitor_ML_in_snowflake.ipynb
+++ b/train_deploy_monitor_ML_in_snowflake.ipynb
@@ -18,12 +18,12 @@
    "version": "3.9.7"
   },
   "lastEditStatus": {
-   "notebookId": "rs3422hvtbxnhpyo5epa",
-   "authorId": "5095547476787",
-   "authorName": "EBOTWICK",
-   "authorEmail": "elliott.botwick@snowflake.com",
-   "sessionId": "3d75a8ec-7071-447f-969c-5ea1ee7c29be",
-   "lastEditTime": 1763408536778
+   "notebookId": "dxjqromavmx5rcxnouo5",
+   "authorId": "47704059113",
+   "authorName": "ADMIN",
+   "authorEmail": "tatiana.petrache@snowflake.com",
+   "sessionId": "9fdf5cc5-f840-4b9b-83d8-bad83ba34f3e",
+   "lastEditTime": 1765719553753
   }
  },
  "nbformat_minor": 4,
@@ -72,7 +72,7 @@
    "metadata": {
     "language": "python",
     "name": "pip_installs",
-    "collapsed": false,
+    "collapsed": true,
     "codeCollapsed": false
    },
    "outputs": [],
@@ -103,7 +103,7 @@
     "resultHeight": 84
    },
    "outputs": [],
-   "source": "import pandas as pd\nimport numpy as np\nimport sklearn\nimport math\nimport pickle\nimport shap\nfrom datetime import datetime\nimport streamlit as st\nfrom xgboost import XGBClassifier\n\n# Snowpark ML\nfrom snowflake.ml.registry import Registry\nfrom snowflake.ml.modeling.tune import get_tuner_context\nfrom snowflake.ml.modeling import tune\nfrom entities import search_algorithm\n\n#Snowflake feature store\nfrom snowflake.ml.feature_store import FeatureStore, FeatureView, Entity, CreationMode\n\n# Snowpark session\nfrom snowflake.snowpark import DataFrame\nfrom snowflake.snowpark.functions import col, to_timestamp, min, max, month, dayofweek, dayofyear, avg, date_add, sql_expr\nfrom snowflake.snowpark.types import IntegerType\nfrom snowflake.snowpark import Window\n\n#setup snowpark session\nfrom snowflake.snowpark.context import get_active_session\nsession = get_active_session()\n# session.use_role('')\nsession"
+   "source": "import pandas as pd\nimport numpy as np\nimport sklearn\nimport math\nimport pickle\nimport shap\nfrom datetime import datetime\nimport streamlit as st\nfrom xgboost import XGBClassifier\n\n# Snowpark ML\nfrom snowflake.ml.registry import Registry\nfrom snowflake.ml.modeling.tune import get_tuner_context\nfrom snowflake.ml.modeling import tune\nfrom entities import search_algorithm\n\n#Snowflake feature store\nfrom snowflake.ml.feature_store import FeatureStore, FeatureView, Entity, CreationMode\n\n# Snowpark session\nfrom snowflake.snowpark import DataFrame\nimport snowflake.snowpark.functions as F\nfrom snowflake.snowpark.functions import col, to_timestamp, min, max, month, dayofweek, dayofyear, avg, date_add, make_interval\nfrom snowflake.snowpark.types import IntegerType, DecimalType\nfrom snowflake.snowpark import Window\n\n#setup snowpark session\nfrom snowflake.snowpark.context import get_active_session\nsession = get_active_session()\n# session.use_role('')\nsession"
   },
   {
    "cell_type": "code",
@@ -167,17 +167,7 @@
     "name": "find_timedelta"
    },
    "outputs": [],
-   "source": [
-    "#Get current date and time\n",
-    "current_time = datetime.now()\n",
-    "df_max_time = datetime.strptime(str(df.select(max(\"TS\")).collect()[0][0]), \"%Y-%m-%d %H:%M:%S.%f\")\n",
-    "\n",
-    "#Find delta between latest existing timestamp and today's date\n",
-    "timedelta = current_time- df_max_time\n",
-    "\n",
-    "#Update timestamps to represent last ~1 year from today's date\n",
-    "df.select(min(date_add(to_timestamp(\"TS\"), timedelta.days-1)), max(date_add(to_timestamp(\"TS\"), timedelta.days-1)))"
-   ]
+   "source": "#Get current date and time\ncurrent_time = datetime.now()\ndf_max_time = datetime.strptime(str(df.select(max(\"TS\")).collect()[0][0]), \"%Y-%m-%d %H:%M:%S.%f\")\n\n#Find delta between latest existing timestamp and today's date\ntimedelta = current_time- df_max_time\n\n#Update timestamps to represent last ~1 year from today's date\ndf.select(min(date_add(to_timestamp(\"TS\"), timedelta.days-1)), max(date_add(to_timestamp(\"TS\"), timedelta.days-1)))\n"
   },
   {
    "cell_type": "markdown",
@@ -202,34 +192,7 @@
     "resultHeight": 0
    },
    "outputs": [],
-   "source": [
-    "#Create a dict with keys for feature names and values containing transform code\n",
-    "\n",
-    "feature_eng_dict = dict()\n",
-    "\n",
-    "#Timstamp features\n",
-    "feature_eng_dict[\"TIMESTAMP\"] = date_add(to_timestamp(\"TS\"), timedelta.days-1)\n",
-    "feature_eng_dict[\"MONTH\"] = month(\"TIMESTAMP\")\n",
-    "feature_eng_dict[\"DAY_OF_YEAR\"] = dayofyear(\"TIMESTAMP\") \n",
-    "feature_eng_dict[\"DOTW\"] = dayofweek(\"TIMESTAMP\")\n",
-    "\n",
-    "# df= df.with_columns(feature_eng_dict.keys(), feature_eng_dict.values())\n",
-    "\n",
-    "#Income and loan features\n",
-    "feature_eng_dict[\"LOAN_AMOUNT\"] = col(\"LOAN_AMOUNT_000s\")*1000\n",
-    "feature_eng_dict[\"INCOME\"] = col(\"APPLICANT_INCOME_000s\")*1000\n",
-    "feature_eng_dict[\"INCOME_LOAN_RATIO\"] = col(\"INCOME\")/col(\"LOAN_AMOUNT\")\n",
-    "\n",
-    "county_window_spec = Window.partition_by(\"COUNTY_NAME\")\n",
-    "feature_eng_dict[\"MEAN_COUNTY_INCOME\"] = avg(\"INCOME\").over(county_window_spec)\n",
-    "feature_eng_dict[\"HIGH_INCOME_FLAG\"] = (col(\"INCOME\")>col(\"MEAN_COUNTY_INCOME\")).astype(IntegerType())\n",
-    "\n",
-    "feature_eng_dict[\"AVG_THIRTY_DAY_LOAN_AMOUNT\"] =  sql_expr(\"\"\"AVG(LOAN_AMOUNT) OVER (PARTITION BY COUNTY_NAME ORDER BY TIMESTAMP  \n",
-    "                                                            RANGE BETWEEN INTERVAL '30 DAYS' PRECEDING AND CURRENT ROW)\"\"\")\n",
-    "\n",
-    "df = df.with_columns(feature_eng_dict.keys(), feature_eng_dict.values())\n",
-    "df.show(3)"
-   ]
+   "source": "#Create a dict with keys for feature names and values containing transform code\n\nfeature_eng_dict = dict()\n\n#Timstamp features\nfeature_eng_dict[\"TIMESTAMP\"] = date_add(to_timestamp(\"TS\"), timedelta.days-1)\nfeature_eng_dict[\"MONTH\"] = month(\"TIMESTAMP\")\nfeature_eng_dict[\"DAY_OF_YEAR\"] = dayofyear(\"TIMESTAMP\") \nfeature_eng_dict[\"DOTW\"] = dayofweek(\"TIMESTAMP\")\n\n# df= df.with_columns(feature_eng_dict.keys(), feature_eng_dict.values())\n\n#Income and loan features\nfeature_eng_dict[\"LOAN_AMOUNT\"] = (col(\"LOAN_AMOUNT_000s\")*1000).cast(DecimalType(15, 2))\nfeature_eng_dict[\"INCOME\"] = (col(\"APPLICANT_INCOME_000s\")*1000).cast(DecimalType(15, 2))\nfeature_eng_dict[\"INCOME_LOAN_RATIO\"] = F.round(col(\"INCOME\")/col(\"LOAN_AMOUNT\"), 4).cast(DecimalType(10, 4))\n\n\ncounty_window_spec = Window.partition_by(\"COUNTY_NAME\")\nfeature_eng_dict[\"MEAN_COUNTY_INCOME\"] = F.round(avg(\"INCOME\").over(county_window_spec), 2).cast(DecimalType(15, 2))\n\nfeature_eng_dict[\"HIGH_INCOME_FLAG\"] = (col(\"INCOME\")>col(\"MEAN_COUNTY_INCOME\")).astype(IntegerType())\n\nfeature_eng_dict[\"AVG_THIRTY_DAY_LOAN_AMOUNT\"] = F.round(\n    F.avg(\"LOAN_AMOUNT\").over(\n        Window.partition_by(\"COUNTY_NAME\")\n        .order_by(\"TIMESTAMP\")\n        .range_between(-make_interval(days=30), 0)  # 30 days preceding to current row\n    ), 2\n).cast(DecimalType(15, 2))\n\ndf = df.with_columns(feature_eng_dict.keys(), feature_eng_dict.values())"
   },
   {
    "cell_type": "code",
@@ -1092,7 +1055,7 @@
     "name": "see_updated_model_versions"
    },
    "outputs": [],
-   "source": "\n\n\n\n\n\n\n#Now we see our optimized version we have now recently promoted to our DEFAULT model version\nmodel_registry.get_model(model_name).default"
+   "source": "#Now we see our optimized version we have now recently promoted to our DEFAULT model version\nmodel_registry.get_model(model_name).default"
   },
   {
    "cell_type": "code",
@@ -1315,26 +1278,7 @@
     "resultHeight": 851
    },
    "outputs": [],
-   "source": [
-    "# Set up the figure\n",
-    "fig, axes = plt.subplots(1, 2, figsize=(10, 6))\n",
-    "fig.suptitle(\"HOME PURCHASE LOAN EXPLANATION\")\n",
-    "# Plot side-by-side boxplots\n",
-    "sns.boxplot(data = all_shap_base, x ='LOAN_PURPOSE_NAME_HOME_PURCHASE', y = 'LOAN_PURPOSE_NAME_HOME_PURCHASE_explanation',\n",
-    "            hue='LOAN_PURPOSE_NAME_HOME_PURCHASE', width=0.8, ax=axes[0])\n",
-    "axes[0].set_title('Base Model')\n",
-    "sns.boxplot(data = all_shap_opt, x ='LOAN_PURPOSE_NAME_HOME_PURCHASE', y = 'LOAN_PURPOSE_NAME_HOME_PURCHASE_explanation',\n",
-    "            hue='LOAN_PURPOSE_NAME_HOME_PURCHASE', width=0.4, ax = axes[1])\n",
-    "axes[1].set_title('Opt Model')\n",
-    "\n",
-    "# Customize and show the plot\n",
-    "for ax in axes:\n",
-    "    ax.set_xlabel(\"Home PURCHASE Loan (1 = True)\")\n",
-    "    ax.set_ylabel(\"Influence\")\n",
-    "    ax.legend(loc='upper right')\n",
-    "\n",
-    "plt.show()\n"
-   ]
+   "source": "# Set up the figure\nfig, axes = plt.subplots(1, 2, figsize=(10, 6))\nfig.suptitle(\"HOME PURCHASE LOAN EXPLANATION\")\n# Plot side-by-side boxplots\nsns.boxplot(data = all_shap_base, x ='LOAN_PURPOSE_NAME_HOME_PURCHASE', y = 'LOAN_PURPOSE_NAME_HOME_PURCHASE_explanation',\n            hue='LOAN_PURPOSE_NAME_HOME_PURCHASE', width=0.8, ax=axes[0])\naxes[0].set_title('Base Model')\nsns.boxplot(data = all_shap_opt, x ='LOAN_PURPOSE_NAME_HOME_PURCHASE', y = 'LOAN_PURPOSE_NAME_HOME_PURCHASE_explanation',\n            hue='LOAN_PURPOSE_NAME_HOME_PURCHASE', width=0.8, ax = axes[1])\naxes[1].set_title('Opt Model')\n\n# Customize and show the plot\nfor ax in axes:\n    ax.set_xlabel(\"Home PURCHASE Loan (1 = True)\")\n    ax.set_ylabel(\"Influence\")\n    ax.legend(loc='upper right')\n\nplt.show()\n"
   },
   {
    "cell_type": "code",
@@ -1347,26 +1291,7 @@
     "name": "plot_home_imrprovement_explanation"
    },
    "outputs": [],
-   "source": [
-    "# Set up the figure\n",
-    "fig, axes = plt.subplots(1, 2, figsize=(10, 6))\n",
-    "fig.suptitle(\"HOME IMPROVEMENT LOAN EXPLANATION\")\n",
-    "# Plot side-by-side boxplots\n",
-    "sns.boxplot(data = all_shap_base, x ='LOAN_PURPOSE_NAME_HOME_IMPROVEMENT', y = 'LOAN_PURPOSE_NAME_HOME_IMPROVEMENT_explanation',\n",
-    "            hue='LOAN_PURPOSE_NAME_HOME_IMPROVEMENT', width=0.8, ax=axes[0])\n",
-    "axes[0].set_title('Base Model')\n",
-    "sns.boxplot(data = all_shap_opt, x ='LOAN_PURPOSE_NAME_HOME_IMPROVEMENT', y = 'LOAN_PURPOSE_NAME_HOME_IMPROVEMENT_explanation',\n",
-    "            hue='LOAN_PURPOSE_NAME_HOME_IMPROVEMENT', width=0.4, ax = axes[1])\n",
-    "axes[1].set_title('Opt Model')\n",
-    "\n",
-    "# Customize and show the plot\n",
-    "for ax in axes:\n",
-    "    ax.set_xlabel(\"Home Improvement Loan (1 = True)\")\n",
-    "    ax.set_ylabel(\"Influence\")\n",
-    "    ax.legend(loc='upper right')\n",
-    "\n",
-    "plt.show()\n"
-   ]
+   "source": "# Set up the figure\nfig, axes = plt.subplots(1, 2, figsize=(10, 6))\nfig.suptitle(\"HOME IMPROVEMENT LOAN EXPLANATION\")\n# Plot side-by-side boxplots\nsns.boxplot(data = all_shap_base, x ='LOAN_PURPOSE_NAME_HOME_IMPROVEMENT', y = 'LOAN_PURPOSE_NAME_HOME_IMPROVEMENT_explanation',\n            hue='LOAN_PURPOSE_NAME_HOME_IMPROVEMENT', width=0.8, ax=axes[0])\naxes[0].set_title('Base Model')\nsns.boxplot(data = all_shap_opt, x ='LOAN_PURPOSE_NAME_HOME_IMPROVEMENT', y = 'LOAN_PURPOSE_NAME_HOME_IMPROVEMENT_explanation',\n            hue='LOAN_PURPOSE_NAME_HOME_IMPROVEMENT', width=0.8, ax = axes[1])\naxes[1].set_title('Opt Model')\n\n# Customize and show the plot\nfor ax in axes:\n    ax.set_xlabel(\"Home Improvement Loan (1 = True)\")\n    ax.set_ylabel(\"Influence\")\n    ax.legend(loc='upper right')\n\nplt.show()\n"
   },
   {
    "cell_type": "markdown",
@@ -1728,24 +1653,35 @@
   },
   {
    "cell_type": "code",
-   "id": "b4e97fa5-d50c-40c8-a5a9-6135a4162adf",
+   "id": "ae787271-b9b6-4e4d-b8a3-2234d376f568",
    "metadata": {
-    "language": "sql",
-    "name": "view_endpoints"
+    "language": "python",
+    "name": "cell2"
    },
    "outputs": [],
-   "source": "SHOW ENDPOINTS IN SERVICE E2E_SNOW_MLOPS_DB.MLOPS_SCHEMA.MORTGAGE_LENDING_PREDICTION_SERVICE",
+   "source": "\nendpoint = session.sql(\"SHOW ENDPOINTS IN SERVICE E2E_SNOW_MLOPS_DB.MLOPS_SCHEMA.MORTGAGE_LENDING_PREDICTION_SERVICE\").collect()\npd.DataFrame(endpoint)",
    "execution_count": null
   },
   {
    "cell_type": "code",
-   "id": "8fdea708-d656-41b7-92d8-45eca76ccf70",
+   "id": "cd5c1c3e-e13f-4ec7-983d-421637e4fc8f",
    "metadata": {
     "language": "sql",
+    "name": "token_gen"
+   },
+   "outputs": [],
+   "source": "alter user admin add programmatic access token t2 mins_to_bypass_network_policy_requirement=1000;",
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "id": "ab6c3766-dba9-4d26-bb0b-2632bdb5b64c",
+   "metadata": {
+    "language": "python",
     "name": "cell1"
    },
    "outputs": [],
-   "source": "SHOW MODELS;",
+   "source": "\nimport requests\n\n# Get Programmatic Access Token\n#pat = open('pat-token-secret.txt','r').read()\ndf_token = token_gen.to_df()\npat = df_token.collect()[0][\"token_secret\"] \nURL = f\"https://{endpoint[0]['ingress_url']}/predict\"\nheaders = {\"Authorization\": f'Snowflake Token=\"{pat}\"'}\n\nrow_dict = {\n    \"LOAN_PURPOSE_NAME_HOME_IMPROVEMENT\": 0,\n    \"LOAN_PURPOSE_NAME_HOME_PURCHASE\": 1,\n    \"LOAN_PURPOSE_NAME_REFINANCING\": 0,\n    \"MONTH\": 1,\n    \"DAY_OF_YEAR\": 27,\n    \"DOTW\": 1,\n    \"LOAN_AMOUNT\": float(238000),\n    \"INCOME\": float(97000),\n    \"INCOME_LOAN_RATIO\": float(0.4075999855995178),\n    \"MEAN_COUNTY_INCOME\": float(168684.75),\n    \"HIGH_INCOME_FLAG\": 0,\n    \"AVG_THIRTY_DAY_LOAN_AMOUNT\": float(315169.90625),\n}\n\npayload_data = {\n    \"data\": [\n        [0, row_dict]\n    ]\n}\n\nst.header(\"Input Data:\")\nst.json(payload_data)\n\nst.write(\"---\")\nst.header(\"Output:\")\n\nr = requests.post(URL, json=payload_data, headers=headers)\n\nst.write(\"Status code:\", r.status_code)\nst.write(\"Content-Type:\", r.headers.get(\"Content-Type\"))\n\ntry:\n    resp_json = r.json()\n    st.subheader(\"Parsed JSON response:\")\n    st.json(resp_json)\nexcept ValueError:\n    st.error(\"Response is not valid JSON\")\n    st.text(r.text)",
    "execution_count": null
   },
   {
