--- a/train_deploy_monitor_ML_in_snowflake.ipynb
+++ b/train_deploy_monitor_ML_in_snowflake.ipynb
@@ -22,8 +22,8 @@
    "authorId": "47704059113",
    "authorName": "ADMIN",
    "authorEmail": "tatiana.petrache@snowflake.com",
-   "sessionId": "9fdf5cc5-f840-4b9b-83d8-bad83ba34f3e",
-   "lastEditTime": 1765719553753
+   "sessionId": "c05739c9-d9cd-4e42-a454-f479a09838fe",
+   "lastEditTime": 1765784190027
   }
  },
  "nbformat_minor": 4,
@@ -36,34 +36,7 @@
     "collapsed": false,
     "name": "INTRO_MD"
    },
-   "source": [
-    "# ❄️ End-to-end ML Demo ❄️\n",
-    "\n",
-    "In this worfklow we will work through the following elements of a typical tabular machine learning pipeline.\n",
-    "\n",
-    "### 1. Use Feature Store to track engineered features\n",
-    "* Store feature defintions in feature store for reproducible computation of ML features\n",
-    "      \n",
-    "### 2. Train two Models using the Snowflake ML APIs\n",
-    "* Baseline XGboost\n",
-    "* XGboost with optimal hyper-parameters identified via Snowflake ML distributed HPO methods\n",
-    "\n",
-    "### 3. Register both models in Snowflake model registry\n",
-    "* Explore model registry capabilities such as **metadata tracking, inference, and explainability**\n",
-    "* Compare model metrics on train/test set to identify any issues of model performance or overfitting\n",
-    "* Tag the best performing model version as 'default' version\n",
-    "### 4. Set up Model Monitor to track 1 year of predicted and actual loan repayments\n",
-    "* **Compute performance metrics** such a F1, Precision, Recall\n",
-    "* **Inspect model drift** (i.e. how much has the average predicted repayment rate changed day-to-day)\n",
-    "* **Compare models** side-by-side to understand which model should be used in production\n",
-    "* Identify and understand **data issues**\n",
-    "\n",
-    "### 5. Track data and model lineage throughout\n",
-    "* View and understand\n",
-    "  * The **origin of the data** used for computed features\n",
-    "  * The **data used** for model training\n",
-    "  * The **available model versions** being monitored"
-   ]
+   "source": "# ❄️ End-to-end ML Demo ❄️\n\n\nThis notebook demonstrates an end-to-end mortgage lending prediction ML pipeline using Snowflake's ML platform. The use case is predicting loan approval likelihood for mortgage applications.\n\nIn this worfklow we will work through the following elements of a typical tabular machine learning pipeline.\n\n### 1. Use Feature Store to track engineered features\n* Store feature defintions in feature store for reproducible computation of ML features\n      \n### 2. Train two Models using the Snowflake ML APIs\n* Baseline XGboost\n* XGboost with optimal hyper-parameters identified via Snowflake ML distributed HPO methods\n\n### 3. Register both models in Snowflake model registry\n* Explore model registry capabilities such as **metadata tracking, inference, and explainability**\n* Compare model metrics on train/test set to identify any issues of model performance or overfitting\n* Tag the best performing model version as 'default' version\n### 4. Set up Model Monitor to track 1 year of predicted and actual loan repayments\n* **Compute performance metrics** such a F1, Precision, Recall\n* **Inspect model drift** (i.e. how much has the average predicted repayment rate changed day-to-day)\n* **Compare models** side-by-side to understand which model should be used in production\n* Identify and understand **data issues**\n\n### 5. Track data and model lineage throughout\n* View and understand\n  * The **origin of the data** used for computed features\n  * The **data used** for model training\n  * The **available model versions** being monitored"
   },
   {
    "cell_type": "code",
@@ -77,6 +50,15 @@
    },
    "outputs": [],
    "source": "!pip install shap snowflake-ml-python==1.19.0"
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ac4006e-41e6-4260-a19b-9f7f67506f2e",
+   "metadata": {
+    "name": "cell11",
+    "collapsed": false
+   },
+   "source": "You now have the option of using *Notebooks* that run on a fully managed ML container environment built specifically for large scale ML workloads. Container Runtime provides a greater degree of control & flexibility of tools, while still providing the flexibility of executing suitable code/methods with a Snowflake warehouse. \n\nThis new runtime gives you access to distributed compute pools with CPUs and GPUs, it is optimized for fast data ingestion from Snowflake, and it gives you the flexibility to run any ML workload. \n\nWith Snowflake’s git integration, easy to use Snowflake DDL to fetch branch-specific resources and work with them on CR. \n"
   },
   {
    "cell_type": "code",
@@ -220,6 +202,15 @@
    "source": [
     "## Create a Snowflake Feature Store"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f4428d7-2f1b-4446-bc59-fea421b88d46",
+   "metadata": {
+    "name": "cell10",
+    "collapsed": false
+   },
+   "source": "*Feature Store* is our native product that helps data scientists and ML engineers author and define features, use Snowflake to maintain and update those features with new source data, and serve the features for use in training or inference pipelines. \n\nThere are 4 main benefits of using the Feature Store in your ML workloads:\n- Easy to use APIs to define all the common types of features that you need, both in SQL or in Python \n- Snowflake keeps your features fresh and updated automatically, you do not have to worry about orchestrating your feature pipelines\n- Third, Feature Store handles all the point-in-time correct joining, so that you can retrieve features that are consistent with your desired timestamp\n- Mechanism & management tool providing governed space for features, makes it easy to find and reuse existing features\n\n"
   },
   {
    "cell_type": "code",
@@ -1128,6 +1119,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4f1b3445-3d00-48be-9bb1-18c797a707f6",
+   "metadata": {
+    "name": "cell9",
+    "collapsed": false
+   },
+   "source": "The scatter plot shows 2 visually distinct clouds of points, reflecting the influence values (SHAP values) assigned to each class."
+  },
+  {
+   "cell_type": "markdown",
    "id": "7d7cfb33-1062-487d-83bc-e3d32835e0d9",
    "metadata": {
     "collapsed": false,
@@ -1158,6 +1158,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "907f757c-cf45-4e5a-86eb-3839d0a913d6",
+   "metadata": {
+    "name": "cell7",
+    "collapsed": false
+   },
+   "source": "The model heavily relies on loan purpose and strongly pushes predictions upward for home-purchase loans. This is the dominant driver of predictions."
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "67469a84-3d44-49e4-8d6e-5cd8a6e8a633",
@@ -1172,6 +1181,15 @@
     "                  test_pd_sample.drop([\"LOAN_ID\",\"MORTGAGERESPONSE\", \"TIMESTAMP\"], axis=1), \n",
     "                  feature_names = test_pd_sample.drop([\"LOAN_ID\",\"MORTGAGERESPONSE\", \"TIMESTAMP\"], axis=1).columns)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45423f43-b16a-4157-bae8-d244bbfc306f",
+   "metadata": {
+    "name": "cell8",
+    "collapsed": false
+   },
+   "source": "The optimized model behaves much more stably, more linearly, and less sensitively than the base model.\n\nKey behavioral shifts:\n\n⭐ Many features now have near-zero influence, indicating strong regularization.    \n⭐ The model relies on loan purpose, but in a much more controlled way.   \n⭐ Income-related features no longer dominate or behave erratically.    \n⭐ Temporal features (day of year, day of week) have very small effects.    "
   },
   {
    "cell_type": "code",
@@ -1229,6 +1247,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9c27c06a-b723-456f-9df7-b8a06c261358",
+   "metadata": {
+    "name": "cell6",
+    "collapsed": false
+   },
+   "source": "The optimized model makes predictions that rely far less on income. While the base model strongly used income as a positive predictor, the optimized model treats income as almost neutral, with a slight downward trend, but on a tiny scale."
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "2298b1f8-0495-42e1-b668-0dcd03d8bb7c",
@@ -1267,6 +1294,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3afdfebb-b563-4d58-a876-56dedc758c5b",
+   "metadata": {
+    "name": "cell3",
+    "collapsed": false
+   },
+   "source": "### Base Model Summary:\n- The base model relied heavily on loan amount, changing predictions drastically as loan size increased. But it also behaved inconsistently, with large spread in SHAP values, suggesting instability and possible overfitting.\n\n### Optimized Model Summary:\n\n- The optimized model uses loan amount in a far more controlled and stable way. Its influence is smoother, smaller, and more predictable. This indicates improved robustness and likely better generalization."
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "14a03aa9-1f1a-4a4e-809e-b22e438d72aa",
@@ -1281,6 +1317,15 @@
    "source": "# Set up the figure\nfig, axes = plt.subplots(1, 2, figsize=(10, 6))\nfig.suptitle(\"HOME PURCHASE LOAN EXPLANATION\")\n# Plot side-by-side boxplots\nsns.boxplot(data = all_shap_base, x ='LOAN_PURPOSE_NAME_HOME_PURCHASE', y = 'LOAN_PURPOSE_NAME_HOME_PURCHASE_explanation',\n            hue='LOAN_PURPOSE_NAME_HOME_PURCHASE', width=0.8, ax=axes[0])\naxes[0].set_title('Base Model')\nsns.boxplot(data = all_shap_opt, x ='LOAN_PURPOSE_NAME_HOME_PURCHASE', y = 'LOAN_PURPOSE_NAME_HOME_PURCHASE_explanation',\n            hue='LOAN_PURPOSE_NAME_HOME_PURCHASE', width=0.8, ax = axes[1])\naxes[1].set_title('Opt Model')\n\n# Customize and show the plot\nfor ax in axes:\n    ax.set_xlabel(\"Home PURCHASE Loan (1 = True)\")\n    ax.set_ylabel(\"Influence\")\n    ax.legend(loc='upper right')\n\nplt.show()\n"
   },
   {
+   "cell_type": "markdown",
+   "id": "de26da7d-0112-436a-8965-8fdfff5d66cf",
+   "metadata": {
+    "name": "cell4",
+    "collapsed": false
+   },
+   "source": "### Base Model Summary:\n- The base model heavily relies on this binary feature. Being a home-purchase loan significantly pushes predictions up; not being one pushes them down. The effect is strong and somewhat noisy\n\n### Optimized Model Summary:\n\n- The optimized model has neutralized the effect of the Home Purchase Loan feature. It no longer affects predictions; the model is more stable and less sensitive to this binary variable."
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "66ea7aad-4e48-4666-a48c-ddc39331cb1f",
@@ -1292,6 +1337,15 @@
    },
    "outputs": [],
    "source": "# Set up the figure\nfig, axes = plt.subplots(1, 2, figsize=(10, 6))\nfig.suptitle(\"HOME IMPROVEMENT LOAN EXPLANATION\")\n# Plot side-by-side boxplots\nsns.boxplot(data = all_shap_base, x ='LOAN_PURPOSE_NAME_HOME_IMPROVEMENT', y = 'LOAN_PURPOSE_NAME_HOME_IMPROVEMENT_explanation',\n            hue='LOAN_PURPOSE_NAME_HOME_IMPROVEMENT', width=0.8, ax=axes[0])\naxes[0].set_title('Base Model')\nsns.boxplot(data = all_shap_opt, x ='LOAN_PURPOSE_NAME_HOME_IMPROVEMENT', y = 'LOAN_PURPOSE_NAME_HOME_IMPROVEMENT_explanation',\n            hue='LOAN_PURPOSE_NAME_HOME_IMPROVEMENT', width=0.8, ax = axes[1])\naxes[1].set_title('Opt Model')\n\n# Customize and show the plot\nfor ax in axes:\n    ax.set_xlabel(\"Home Improvement Loan (1 = True)\")\n    ax.set_ylabel(\"Influence\")\n    ax.legend(loc='upper right')\n\nplt.show()\n"
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08d7c0f2-de3a-4a79-b7d7-f1cfac550c58",
+   "metadata": {
+    "name": "cell5",
+    "collapsed": false
+   },
+   "source": "### Base Model Summary:\n- In the base model, being a home improvement loan generally pushes predictions downward, but the effect is inconsistent and sometimes extreme. The model overreacts in certain regions and appears unstable with this feature.\n\n### Optimized Model Summary:\n\n- The optimized model applies this feature in a clean and stable way. Being a home improvement loan always slightly decreases the prediction, and not being one slightly increases it. The model is now consistent and interpretable."
   },
   {
    "cell_type": "markdown",
